crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(response)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "matches": [
    {
      "dataset": "multi_column_search",
      "primary_key": {
        "cp_catalog_page_sk": 1
      },
      "value": "In general basic characters welcome. Clearly lively friends con"
    },
    {
      "dataset": "multi_column_search",
      "primary_key": {
        "cp_catalog_page_sk": 3
      },
      "value": "Earlier different differences get just to a methods; masses inclu"
    },
    {
      "dataset": "multi_column_search",
      "primary_key": {
        "cp_catalog_page_sk": 5
      },
      "value": "Narrowly great dogs carry only by the events. Successful, able legs would no"
    }
  ]
}
